yelpcamp/v2/readme.md
v1
#YelpCamp
*Add Landing Page	
*Add Campgrounds Page that lists all campgrounds

Each Campground has:
* Name	* Image

#Layout and Basic Styling
*Create our header and footer partials
*Add in Bootstrap

#Creating New Campgrounds
*Setup new campground POST Route
*Add in body-parser
*Setup route to show form
*Add basic unstyle form

#Style the campgrounds page
*Add a better header/title
*Make campgrounds display in a grid

#Style the Navbar and Form
*Add a navbar to all templates
*Style the new campground form

29# Databases
##Intro to Databases
* What is a database?
* SQL vs. NoSQL

v2
# Adding moongoose to our YelpCamp app so that it save all the data
#Add Mongoose
*Install and configure mongoose
*Setup campground model
*Use campground model inside of our routes!

#Show Page
* Review a restful route we have seen so far
* Add description to our campground model
* Show db.collection.drop()
* Add a show rooute/template

